--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "version": "1.0.0",
   "description": "A Lorem Ipsum generator for anime fans, baka!",
   "main": "app.js",
+  "repository": {
+  "url": "https://github.com/arturoalviar/baka-ipsum",
+  "type": "git"
+  },
   "license": "MIT",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
+    "autoprefixer-stylus": "^0.11.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
